force-app/main/default/objects/Stock_Holding__c/fields/Change_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Change_Percentage__c</fullName>
    <description>Percentage change in stock price</description>
    <formula>IF(ISNULL(Purchase_Price__c) || Purchase_Price__c = 0, 0, (Current_Price__c - Purchase_Price__c) / Purchase_Price__c * 100)</formula>
    <formulaTreatBlanksAs>Zero</formulaTreatBlanksAs>
    <label>Change Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>