force-app/main/default/objects/Stock_Holding__c/fields/Client_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Client_Portfolio__c</fullName>
    <description>Portfolio to which this stock holding belongs</description>
    <label>Client Portfolio</label>
    <referenceTo>Client_Portfolio__c</referenceTo>
    <relationshipLabel>Stock Holdings</relationshipLabel>
    <relationshipName>Stock_Holdings</relationshipName>
    <type>Lookup</type>
</CustomField>