force-app/main/default/objects/Stock_Holding__c/fields/Current_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Price__c</fullName>
    <description>Current market price per stock</description>
    <label>Current Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>