force-app/main/default/objects/Stock_Holding__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Timestamp of last price update</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>