force-app/main/default/objects/Stock_Holding__c/fields/Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Market_Value__c</fullName>
    <description>Total market value of stock holding</description>
    <formula>Quantity__c * Current_Price__c</formula>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>