force-app/main/default/objects/Stock_Holding__c/fields/Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss__c</fullName>
    <description>Total profit or loss on this stock holding</description>
    <formula>(Current_Price__c - Purchase_Price__c) * Quantity__c</formula>
    <label>Profit/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>